no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #15.13.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
+VERSION ==>                                     #15.14.0 (current), 14.15.0 (active LTS), 12.19.0 (active LTS), 10.23.0 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1110,6 +1110,7 @@ createInterface(OPTS)->INTERFACE                #OPTS:
                                                 #    successively but more than NUMms apart, treat them as two newlines, not one
                                                 #  - escapeCodeTimeout NUM (def: 500) (in ms): how long to wait when starting an ESC sequence
                                              12*#  - tabSize NUM (def: 8)
+                                        15.14.0*#  - signal ABORT_SIGNAL: call INTERFACE.close() on abort
 INTERFACE.close()                               #Called by ISTREAM.end() and CTRL-C|D|Z
 INTERFACE.on("close", FUNC())                   #
 
@@ -1379,6 +1380,7 @@ new Socket([OBJ])                               #OBJ:
                                                 #     - which means:
                                                 #        - can still write to it (but non-readable)
                                                 #        - must manually call end()
+                                        15.14.0*#  - signal ABORT_SIGNAL: call destroy() on abort
 TCPSOCKET.connect(ARGS[, FUNC()])               #ARGS:
                                                 #  - OBJ:
                                                 #     - port PORT_NUM|'PORT'
@@ -2304,6 +2306,7 @@ readFile                                        #Easier way than using open() an
                                                 #Prefer createReadStream(...).pipe(OSTREAM)
 write|appendFile(FILENAME|UINT,                 #OPTS has same members but also mode MODE_INT (def: 0666), and default encoding is 'utf8'
 [STDBUFFER,] [OPTS, ] FUNC(ERROR))              #Def flag is "w|a"
+                                        15.14.0*#STDBUFFER can also be STREAM|[ASYNC_]ITERABLE
 createReadStream(PATH[, OPTS])->ISTREAM         #Preferred over readFile().
                                                 #Useful with ISTREAM.[.pipe(IOSTREAM)...]pipe(OSTREAM):
                                                 #  - transmits to OSTREAM by chunks ("data" events) instead of at once
