no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -163,9 +163,10 @@ new AsyncResource('RESOURCE_TYPE'[, OPTS])      #Custom RESOURCE
                                                 #    is garbage collected
 ASYNCRESOURCE.runInAsyncScope
  (FUNC[, THIS][, ...ARGS])                      #This is automatically create a new TASK_ID and call 'before|after' events
-ASYNCRESOURCE.bind(FUNC)->FUNC2         12.19.0*#Like ASYNCRESOURCE.runInAsyncScope.bind(FUNC)
+ASYNCRESOURCE.bind(FUNC[, THIS])->FUNC2 12.19.0*#Like ASYNCRESOURCE.runInAsyncScope.bind(FUNC)
 AsyncResource.bind                      12.19.0*#Like (new AsyncResource('RESOURCE_TYPE')).bind(FUNC)
- (FUNC[, 'RESOURCE_TYPE'])->FUNC2       12.19.0*#Def 'RESOURCE_TYPE': 'bound-anonymous-fn'
+ (FUNC[, 'RESOURCE_TYPE'][, THIS])
+ ->FUNC2                                12.19.0*#Def 'RESOURCE_TYPE': 'bound-anonymous-fn'
 ASYNCRESOURCE.emitDestroy()                     #
 ASYNCRESOURCE.asyncId()->TASK_ID                #
 ASYNCRESOURCE.triggerId()->PARENT_TASK_ID       #
@@ -2860,10 +2861,10 @@ GOAL ==>                                        #A single process will only use 
                                                 #  - if UDPSOCKET.bind() or TCPSERVER.listen() OBJ.exclusive true (def: false), socket is not shared
 fork([OBJ])                                     #Like CHILD_PROCESS.fork(), but returns a WORKER, which gives extra functions.
                                                 #Can fork a separate file for children, but if forking the same file, should
-                                                #use if ( CLUSTER.isMaster|Worker ) in beginning of code.
+                                                #use if ( CLUSTER.isPrimary|Worker ) in beginning of code.
                                                 #OBJ is env (def: process.env).
                                                 #Options are controlled by CLUSTER.settings, that is available for read once
-                                                #CLUSTER.setupMaster(OBJ) has been called to change it (only once):
+                                                #CLUSTER.setupPrimary(OBJ) has been called to change it (only once):
                                                 #  - exec STR: the file the child is forked with (def: process.argv[1])
                                                 #  - args STR (def: process.argv.slice(2)): to worker
                                                 #  - execArgv STR_ARR (def: process.execArgv): to node
@@ -2871,7 +2872,8 @@ fork([OBJ])                                     #Like CHILD_PROCESS.fork(), but 
                                                 #  - cwd, windowHide: like CHILD_PROCESS.spawn()
                                              12*#  - serialization: like CHILD_PROCESS.spawn()
                                                 #  - uid|gid UINT, stdio
-                                                #setupMaster() fire 'setup'(OBJ) event
+                                                #setupPrimary() fire 'setup'(OBJ) event
+                                        <16.0.0*#isPrimary|setupPrimary() previously named isMaster|setupPrimary()
 on("fork|online", FUNC(WORKER))                 #Fired when a child process is created|ready to respond.
 WORKER.on("online", FUNC())                     #
 on("listening", FUNC(WORKER, OBJ))              #Fired when a child process use TCPSERVER.listen().
