no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3533,6 +3533,7 @@ PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMI
                                                 #     - no 'navigation' PERFORMANCENAVIGATION
                                                 #     - also has 'gc', 'function',
                                              12*#       'http' or 'http2' (HTTP request started|done)
+                                         16.0.0*#  - PERFENTRY has additional: detail VAL
                                                 #  - no PERFORMANCE.clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
                                                 #  - PERFOBSERVER.observe OPTS.buffered BOOL:
                                                 #     - if false (def), fire listener callbacks sync
@@ -3577,16 +3578,19 @@ PERFGCTIMING                                    #PERFENTRY for garbage collector
                                                 #  - name 'gc'
                                                 #  - startTime
                                                 #  - duration DOMTIMESTAMP
-                                                #  - kind: constants.NODE_PERFORMANCE_GC_MINOR|MAJOR|INCREMENTAL|WEAKCB (1|2|4|8)
-                                             12*#  - flags: constants.NODE_PERFORMANCE_GC_FLAGS_NO|CONSTRUCT_RETAINED|FORCED|
-                                             12*#    SYNCHRONOUS_PHANTOM_PROCESSING|ALL_AVAILABLE_GARBAGE|ALL_EXTERNAL_MEMORY|
-                                             12*#    SCHEDULE_IDLE (0|2|4|8|16|32|64)
+                                                #  - details
+                                        <16.0.0*#    (before those were on PERFENTRY.* directly)
+                                                #     - kind: constants.NODE_PERFORMANCE_GC_MINOR|MAJOR|INCREMENTAL|WEAKCB (1|2|4|8)
+                                             12*#     - flags: constants.NODE_PERFORMANCE_GC_FLAGS_NO|CONSTRUCT_RETAINED|FORCED|
+                                             12*#       SYNCHRONOUS_PHANTOM_PROCESSING|ALL_AVAILABLE_GARBAGE|ALL_EXTERNAL_MEMORY|
+                                             12*#       SCHEDULE_IDLE (0|2|4|8|16|32|64)
 
-PERFORMANCE.timerify(FUNC)->FUNC                #Make FUNC(...) create a PERFENTRY with:
+PERFORMANCE.timerify(FUNC)->FUNC                #Make FUNC(ARG...) create a PERFENTRY with:
                                                 #  - entryType 'function'
                                                 #  - duration: how long FUNC() took
                                                 #  - name FUNC.name (without 'timerified ')
                                                 #  - startTime DOMLOCALTIME
+                                         16.0.0*#  - detail 'ARG'_ARR
                                                 #Prepend 'timerified ' to FUNC.name
                                                 #Does not await return value if it is a PROMISE
 
