no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -528,6 +528,7 @@ import 'data:MIME,...'                       12*#For MIMEs text/javascript, appl
                                              12*#Only with ESM
 
 import 'node:ID'                        12.20.0*#Same as import 'ID' (core module), but valid URI
+                                         16.0.0*#Available with require() too
 
 
                                              /=+===============================+=\
@@ -3533,7 +3534,6 @@ PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMI
                                                 #     - no 'navigation' PERFORMANCENAVIGATION
                                                 #     - also has 'gc', 'function',
                                              12*#       'http' or 'http2' (HTTP request started|done)
-                                         16.0.0*#  - PERFENTRY has additional: detail VAL
                                                 #  - no PERFORMANCE.clearMeasures|getEntries*() (but PERFLIST.getEntries*() are kept)
                                                 #  - PERFOBSERVER.observe OPTS.buffered BOOL:
                                                 #     - if false (def), fire listener callbacks sync
@@ -3585,14 +3585,16 @@ PERFGCTIMING                                    #PERFENTRY for garbage collector
                                              12*#       SYNCHRONOUS_PHANTOM_PROCESSING|ALL_AVAILABLE_GARBAGE|ALL_EXTERNAL_MEMORY|
                                              12*#       SCHEDULE_IDLE (0|2|4|8|16|32|64)
 
-PERFORMANCE.timerify(FUNC)->FUNC                #Make FUNC(ARG...) create a PERFENTRY with:
+PERFORMANCE.timerify(FUNC[, OPTS])->FUNC        #Make FUNC(ARG...) create a PERFENTRY with:
                                                 #  - entryType 'function'
                                                 #  - duration: how long FUNC() took
                                                 #  - name FUNC.name (without 'timerified ')
                                                 #  - startTime DOMLOCALTIME
                                          16.0.0*#  - detail 'ARG'_ARR
                                                 #Prepend 'timerified ' to FUNC.name
-                                                #Does not await return value if it is a PROMISE
+                                        <16.0.0*#Does not await return value if it is a PROMISE
+                                                #OPTS:
+                                         16.0.0*#  - histogram RECORDABLE_HISTOGRAM: add values to it
 
 monitorEventLoopDelay([OPTS])->HISTOGRAM     11*#Even loop benchmarking, i.e. how long each microtask takes (in ns).
                                              11*#OPTS:
