no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1465,6 +1465,7 @@ SEGMENTS.containing(NUM)->SEGMENT|undefined  *-~#Retrieve SEGMENT at index NUM
                                               -|#       i.e. match any character including: LF CR U+2028 U+2029
                                               -|#     - y: same as g, with ^ in beginning of PATTERN
                                               -|#     - u: see above
+                                      *16.0.0-|~#     - d: enable ARR.indices with REGEXP.exec()
                                                 #  - available at REGEXP.ignoreCase|global|multiline|sticky BOOL
 REGEXP.source                                   #'PATTERN' (read-only)
 REGEXP.flags                                  -|#'FLAGS' (read-only)
@@ -1474,7 +1475,7 @@ REGEXP.exec(STR)                                #Search REGEXP in STR and return
                                                 #  - ARR[NUM]: parenthesis matches
                                                 #  - ARR.index: first match index
                                                 #  - ARR.input: STR
-                                            *-|~#  - ARR.indices
+                                      *16.0.0-|~#  - ARR.indices
 REGEXP.test(STR)                                #Returns BOOL
 
 
