--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.0.0 (current), 15.14.0 (maintenance), 14.17.0 (active LTS), 12.22.1 (maintenance)
+VERSION ==>                                     #16.1.0 (current), 15.14.0 (maintenance), 14.17.0 (active LTS), 12.22.1 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -3539,6 +3539,7 @@ PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMI
                                                 #     - if false (def), fire listener callbacks sync
                                                 #     - if true, use setImmediate()
                                                 #  - PERFOBSERVER is an ASYNCRESOURCE
+                                         16.0.0*#performance is global
 WORKER.performance                      12.22.0*#Same but inside a WORKER
                                         12.22.0*#Only has eventLoopUtilization()
 
