no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3547,6 +3547,8 @@ DOMTIMESTAMP                                    #Still milliseconds unit, but pr
                                                 #  - if DOMGLOBALTIME: 1µs
                                                 #  - otherwise: 100ns on Windows, 1ns on Unix
 
+PERFORMANCE.toJSON()->OBJ                16.1.0*#Like in DOM
+
 PERFORMANCE.timeOrigin                          #DOMGLOBALTIME base of DOMLOCALTIME, i.e. when Node starting running
                                                 #  - this is right after the process was initialized (which takes ~7ms on my machine)
 
