no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1442,8 +1442,7 @@ SEGMENTS.containing(NUM)->SEGMENT|undefined  *-~#Retrieve SEGMENT at index NUM
                                               -|#  - \p \P: requires u flag
                                                -#  - (?<=) (?<!)
                                               -|#  - (?<GROUP>) \k<GROUP>:
-                                              -|#     - REGEXP.exec() return value ARR also defines ARR.groups.GROUP to access
-                                              -|#       those
+                                              -|#     - REGEXP.exec() return value ARR also defines ARR.groups.GROUP to access those
                                               -|#     - STR.replace() accesses those using:
                                               -|#        - ${GROUP} if using a string (with normal quotes)
                                               -|#        - extra parameter groups OBJ if using a FUNC
@@ -1475,7 +1474,9 @@ REGEXP.exec(STR)                                #Search REGEXP in STR and return
                                                 #  - ARR[NUM]: parenthesis matches
                                                 #  - ARR.index: first match index
                                                 #  - ARR.input: STR
-                                      *16.0.0-|~#  - ARR.indices
+                                              -|#  - ARR.groups.GROUP: STR (see (?<GROUP>))
+                                      *16.0.0-|~#  - ARR.indices[0|NUM], ARR.indices.groups.GROUP: like ARR[0|NUM], ARR.groups.GROUP
+                                      *16.0.0-|~#    but as start|end indices [NUM2, NUM3] instead of STR
 REGEXP.test(STR)                                #Returns BOOL
 
 
