no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -6,7 +6,7 @@
 
 
 Todo:
-  - document CRYPTO: generateKey[Sync](), getCipherInfo(), hkdf[Sync](), webcrypto, X509Certificate, NodeEdKey*
+  - document CRYPTO: generateKey[Sync](), CryptoKey, util.types.*key, getCipherInfo(), hkdf[Sync](), webcrypto, X509Certificate, NodeEdKey*
   - document http/2
   - document quic (including NET.createQuicSocket())
 
@@ -21,7 +21,7 @@ Todo:
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #16.1.0 (current), 15.14.0 (maintenance), 14.17.0 (active LTS), 12.22.1 (maintenance)
+VERSION ==>                                     #16.2.0 (current), 15.14.0 (maintenance), 14.17.0 (active LTS), 12.22.1 (maintenance)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -560,8 +560,9 @@ require.resolve(STR[, OPTS])->'/PATH'           #How require(STR) would resolve,
                                                 #  - paths 'DIR'_ARR: alternative directories to look into.
                                                 #    Their [.../[..]]./node_modules will always be searched.
 require.resolve.paths(STR)->'DIR'_ARR           #Directories that would be looked into when require(STR) would resolve
-import.meta.resolve(STR[, CURRENT_URL])
- ->PROMISE_'/PATH'                           12*#Same as require.resolve() but for ESM
+import.meta.resolve(STR[, CURRENT_URL])      12*#Same as require.resolve() but for ESM
+ ->PROMISE_'/PATH'                           12*#CURRENT_URL is STR
+                                         16.2.0*#or URL
 --experimental-import-meta-resolve           12*#Needed for import.meta.resolve()
 
 require.cache['/PATH']                          #require() cache (i.e. modules are only loaded once).
@@ -2990,6 +2991,7 @@ WORKER.terminate()->PROMISE_EXIT_CODE           #Worker current microtask will b
                                                 #EXIT_CODE will be 1
                                              12*#Async and return a PROMISE
 
+process.on('worker', FUNC(WORKER))       16.2.0*#When worker starts
 WORKER.on('exit', FUNC(EXIT_CODE))              #When worker ends (including because of uncaught exceptions)
 
 WORKER.on('error', FUNC(ERROR))                 #Uncaught exception within worker.
@@ -3647,6 +3649,9 @@ ICU DATA                                        #I18n dataset used by:
                                                 #Can use package full-icu to down ICU dataset manually.
 
 process.versions.icu                            #'VERSION'|undefined
+
+ENVVAR TZ                                13.0.0*#Timezone
+                                        <16.2.0*#Did not work on Windows before
 
 ENCODING                                        #Either: ascii, utf8 (def), urf16le|ucs2, base64, hex, binary (actually latin-1)
                                          15.7.0*#or base64url
