no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1628,11 +1628,11 @@ new SharedArrayBuffer(UINT)                    -#Can be used like an ARRBUFFER i
                                                -#  - new TypedArray(...)
                                                -#  - postMessage(...)
                                                -#Except:
-                                               -#  - cannot be used with DataView, and no SharedArrayBuffer.isView()
                                                -#  - shared between contexts|WINDOWs, e.g. when passed via postMessage()
                                                -#     - postMessage() should not use VAL2
                                                -#  - must be manipulated using Atomics.*() to ensure thread-safety:
                                                -#     - provide correct atomicity and order, underlyingly using a lock
+                                               -#  - cannot be used with DataView, and no SharedArrayBuffer.isView()
 
 Atomics.load(S_ARRBUFFER, NUM)->VAL            -#Like S_ARRBUFFER[NUM]
 Atomics.store(S_ARRBUFFER, NUM, VAL)->VAL      -#Like S_ARRBUFFER[NUM] = VAL
@@ -1651,7 +1651,7 @@ Atomics.wait                                   -#Wait until Atomics.notify(), pr
                                                -#     - or until timeout NUM2ms (STR is "timed-out")
 Atomics.waitAsync
  (S_INT32_ARR, NUM, VAL[, NUM2])
- ->PROMISE_STR                               *-~#Same but async
+ ->PROMISE_STR                         *16.0.0-~#Same but async
 Atomics.notify(S_INT32_ARR, NUM, NUM2)         -#Wake up NUM2 workers Atomics.waiting, with same first two arguments
 
 Atomics.isLockFree(S_ARRBUFFER, NUM)->BOOL     -#True if underlying hardware can avoid locks for S_ARRBUFFER in a typed array
