no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1799,7 +1799,7 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.22.1)
+import/*                         ##Node module "eslint-plugin-import" (2.23.0)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
@@ -1815,7 +1815,7 @@ import/*                         ##Node module "eslint-plugin-import
                                  ##     - uses package eslint-import-resolver-RESOLVER
                                  ##     - resolvers do preprocessing each imported path
                                  ##     - available:
-                                 ##        - webpack (0.13.0), with RESOLVER_OPTS: config STR|OBJ (def: use webpack.config.js), env ENV
+                                 ##        - webpack (0.13.1), with RESOLVER_OPTS: config STR|OBJ (def: use webpack.config.js), env ENV
                                  ##        - node (0.3.4), with RESOLVER_OPTS:
                                  ##           - extensions '.EXT'_ARR
                                  ##           - paths STR_ARR (like NODE_PATH)
@@ -1911,13 +1911,14 @@ node/file-extension-in-import    ##Avoid or require specifying file extensions i
 import/no-absolute-path [OBJ]    ##Avoid import|require absolute paths
                                  ##OBJ: esmodule|commonjs|amd BOOL (def: true|true|false)
 import/no-internal-modules [OBJ] ##Avoid import|require of '.../DIR/FILE', as opposed to '.../DIR' or '.../FILE'
-                                 ##OBJ: allow 'REGEXP'_ARR
+                                 ##OBJ: allow|forbid 'REGEXP'_ARR
 import/no-relative-parent-imports##Avoid '../DIR|FILE'
 import/no-useless-path-segments  ##Avoid import|require with paths that could be normalized, e.g. '.../../', duplicate slashes
  [OBJ]                           ##or trailing slashes
                                  ##OBJ:
                                  ##  - noUselessIndex BOOL (def: false): no 'index.js' filenames
                                  ##  - commonjs BOOL (def: false): for require() too
+import/no-relative-packages      ##Monorepo packages must be imported as 'PACKAGE' nor '../PATH'
 
 no-duplicate-imports [OBJ]        #Avoid duplicate module imports, e.g. import ... from 'MDL'; import ... from 'MDL';
                                   #OBJ: includeExports BOOL (def: false): also forbids
@@ -1975,11 +1976,13 @@ import/order [OBJ]               ##Must order import|require
                                  ##  - groups ARR of STR (enforce ordering) or STR_ARR (siblings), among (default follows):
                                  ##     - 'builtin': core modules
                                  ##     - 'external': external libraries
+                                 ##     - 'internal': 'DIR/...'
                                  ##     - 'parent': '../...'
                                  ##     - 'sibling': './...'
                                  ##     - 'index': './'
-                                 ##     - 'internal': 'DIR/...'
-                                 ##     - 'unkown': anything else that might happen when using loaders, e.g. '!...'
+                                 ##     - 'object': "import VAR2 = NAMESPACE[.VARR]" (TypeScript)
+                                 ##     - 'type': "import type" (TypeScript)
+                                 ##     - 'unknown': anything else that might happen when using loaders, e.g. '!...'
                                  ##  - pathGroups OBJ_ARR: add specific files to groups:
                                  ##     - group 'GROUP'
                                  ##     - pattern 'GLOB'
@@ -2007,6 +2010,9 @@ import/no-commonjs [OBJ]         ##Avoid require() or module.exports
                                  ##  - allowPrimitiveModules BOOL (def: false): allow module.exports = non-OBJ|FUNC
 unicorn/prefer-module            ##Avoid require(), module.exports, 'use strict', __dirname|__filename
 import/no-amd                    ##Avoid AMD defined|require()
+import/no-import-module-exports  ##Avoid CommonJS module.exports and ESM import in same file
+ [OBJ]                           ##OBJ:
+                                 ##  - exceptions 'GLOB'_ARR. PACKAGE.main file is always excluded
 
 import/no-webpack-loader-syntax  ##Avoid import|require using Webpack loader syntax, i.e. 'LOADER!...'
                                  ##Should use Webpack conf instead of polluting the code.
