no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1799,7 +1799,7 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.23.0)
+import/*                         ##Node module "eslint-plugin-import" (2.23.2)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
@@ -1995,6 +1995,7 @@ import/order [OBJ]               ##Must order import|require
                                  ##  - alphabetize:
                                  ##     - order 'asc', 'desc' or 'ignore' (def): alphabetical sorting within each group
                                  ##     - caseInsensitive BOOL (def: false)
+                                 ##  - warnOnUnassignedImports BOOL (def: false): include unassigned imports
 import/newline-after-import [OBJ]##Must have OBJ.count NUM (def: 1) newlines after last import|require
 
 import/unambiguous               ##Make sure file types matches parserOptions.sourceType 'script|module'
