no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1523,6 +1523,7 @@ connect([PORT_NUM[,'HOST']]OBJ[,FUNC(TLSSOCKT)])#Like TCP.connect(), but for TLS
                                                 #  - timeout: like TCP.connect() OPTS.timeout
                                                 #  - host 'HOST', port PORT_NUM, path 'PATH'
                                                 #  - socket TCPSOCKET|IOSTREAM: use an existing TCPSOCKET (host+port can be ommitted then)
+                                         15.1.0*#  - onread OBJ: like TCPSOCKET.onread
                                                 #  - servername: for SNI, hostname to choose
                                                 #  - checkServerIdentity('HOST', CERT_BUFFER): if throw error, refuse connection
                                                 #  - minDHSize NUM (def: 1024)
@@ -1926,6 +1927,8 @@ new Resolver([OPTS])                            #RESOLVER
 [RESOLVER.]getServers()->'IP[:PORT]'_ARR        #List of servers
 
 RESOLVER.cancel()                               #Cancel all current resolve*|reverse() calls, with ERROR with code 'ECANCELLED'
+RESOLVER.setLocalAddress
+ (['IPv4'][, 'IPv6'])                    15.1.0*#Changes which address is the local one (def: '0.0.0.0' and '::0')
 
 promises.*(...)                                 #Like DNS.*(...) except returns PROMISE and no RESOLVER.cancel()
                                                 #No more experimental warning
@@ -2730,6 +2733,7 @@ CHILDPROCESS.disconnect()                       #Flush all communication, then b
                                                 #Do it before exiting.
 CHILDPROCESS.connected                          #
 CHILDPROCESS.on("disconnect", FUNC())           #
+CHILDPROCESS.on("spawn", FUNC())         15.1.0*#Fired when CHILDPROCESS initialized but command not started yet
 CHILDPROCESS.on("error", FUNC(ERROR))           #When CHILDPROCESS could not spawn() or send|kill|disconnect()
                                                 #The exit event might be fired or not after error event.
 CHILDPROCESS.on("exit|close",FUNC(UINT,SIGNAME))#UINT is the exit code, SIGNAME the terminating signal.
@@ -3396,6 +3400,8 @@ PERFOBSERVER                                    #     - 'timing' PERFORMANCETIMI
                                                 #     - if false (def), fire listener callbacks sync
                                                 #     - if true, use setImmediate()
                                                 #  - PERFOBSERVER is an ASYNCRESOURCE
+WORKER.performance                              #Same but inside a WORKER
+                                                #Only has eventLoopUtilization()
 
 DOMTIMESTAMP                                    #Still milliseconds unit, but precision (on an average machine) is:
                                                 #  - if DOMGLOBALTIME: 1µs
@@ -3803,7 +3809,9 @@ setFlagsFromString('--OPT ...')                 #Additional v8 CLI options
 serialize(VAL)->BUFFER
 deserialize(BUFFER)->VAL                        #Serialize|deserialize according to structured clone algorithm (see JavaScript doc)
 
-NODE_V8_COVERAGE=DIR                            #See v8 coverage doc
+NODE_V8_COVERAGE=DIR                            #
+V8.takeCoverage()                       12.22.0*#
+V8.stopCoverage()                       12.22.0*#See v8 coverage doc
 
 getHeapSnapshot()->ISTREAM                   11*#Create a V8 heap snapshot. This serializes the current process|worker state.
                                              11*#Parent|child workers are not included.
@@ -3813,6 +3821,9 @@ getHeapSnapshot()->ISTREAM                   11*#Create a V8 heap snapshot. This
 writeHeapSnapshot(['FILENAME'])->'FILENAME'  11*#Write getHeapSnapshot() to a file in process.cwd()
                                              11*#'FILENAME' defaults to 'Heap-${yyyymmdd}-${hhmmss}-${pid}-${threadId}.heapsnapshot'
 --heapsnaphot-signal=SIGNAL                  12*#Do writeHeapSnapshot() on SIGNAL
+--heapsnaphot-near-heap-limit=NUM        15.1.0*#Do writeHeapSnapshot() when close to heap limit (memory crash)
+                                         15.1.0*#Rotates at most files at once
+                                         15.1.0*#Def: 0 (disabled)
 
 --use-largepages=STR                         12*#Use page size of 2MiB instead of 4KiB.
                                              12*#Good when lots of random access on large amount of memory
